// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.trust.v1;

import "teleport/legacy/types/types.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/trust/v1";

// TrustService provides methods to manage certificate authorities.
service TrustService {
  // GetCertAuthority returns a cert authority by type and domain.
  rpc GetCertAuthority(GetCertAuthorityRequest) returns (types.CertAuthorityV2);
}

// Request for GetCertAuthority
message GetCertAuthorityRequest {
  // Type of certificate authority.
  string type = 1;
  // The domain for the certificate authority.
  string domain = 2;
  // Whether the private key should be included in the response.
  bool include_key = 3;
}
